fixed elements being cut off on the page because of viewport

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .container {
-  height: 100vh;
+  min-height: 100vh;
   border-color: white;
   display: flex;
   flex-direction: column;
